--- a/contactos.html
+++ b/contactos.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Transportz</title>
+  <title>TROME EXPRESS CARGO E.I.R.L</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -40,7 +40,7 @@
             <div class="logo-box">
               <img src="images/logo.png" alt="">
               <span>
-                Transportz
+                TROME EXPRESS CARGO E.I.R.L
               </span>
             </div>
           </a>
@@ -51,27 +51,30 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html"> Nosotros </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="flota.html"> flota</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="atencion.html"> Atencion </a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link " href="contactos.html">Contactos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link " href="ubicacion.html">Ubicacion</a>
-              </li>
+               <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html"> Nosotros </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="servicios.html"> servicios </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="flota.html"> flota</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="atencion.html"> Atencion </a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link " href="contactos.html">Contactos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link " href="ubicacion.html">Ubicacion</a>
+                      </li>
             </ul>
           </div>
         </nav>
@@ -79,7 +82,7 @@
           <div class="logo-box">
             <img src="images/logo.png" alt="">
             <span>
-              Transportz
+              TROME EXPRESS CARGO E.I.R.L
             </span>
           </div>
           <div>
@@ -91,7 +94,7 @@
                     <img src="images/phone.png" alt="" />
                   </div>
                   <span>
-                    (+71) 258964785
+                    984 102 689
                   </span>
                 </a>
                 <a href="" class="ml-4">
@@ -99,7 +102,7 @@
                     <img src="images/mail.png" alt="" />
                   </div>
                   <span>
-                    transportz@gmail.com
+                    transportestrome@gmail.com
                   </span>
                 </a>
               </div>
@@ -138,11 +141,14 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
                     <ul class="navbar-nav  ">
-                      <li class="nav-item active">
+                       <li class="nav-item active">
                         <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="nosotros.html"> Nosotros </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="servicios.html"> servicios </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="flota.html"> flota</a>
@@ -182,7 +188,7 @@
   <section class="contact_section layout_padding">
     <div class="d-flex justify-content-center">
       <h2 class="heading_style">
-        Contact us
+        Contactanos
       </h2>
     </div>
     <div class="container layout_padding2-top">
@@ -221,7 +227,6 @@
   <!-- end contact section -->
 
 
-
   <!-- info section -->
   <section class="info_section ">
     <div class="container ">
@@ -230,11 +235,11 @@
           <div class="logo-box">
             <img src="images/logo-white.png" alt="">
             <span>
-              Transportz
+              Empresa de transportes Trome Express Cargo
             </span>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
+            Empresa de Carga Cusco - Lima
           </p>
           <div class="info_social">
             <div>
@@ -261,21 +266,21 @@
         </div>
         <div class="col-md-3 info_address">
           <h5>
-            Address
+            Dirección
           </h5>
           <p>
-            Healing Center, 176 W Street name,
-            New York, NY 10014, US
+            Av. República De Argentina Mza. 
+            H Lote. 17 B, Cusco 08200
           </p>
           <p>
-            (+71) 8522369417
+            984 102 690
           </p>
           <p>
-            (+71) 8522369417
+            984 102 689
           </p>
           <p>
             <a href="">
-              transportz@gmail.com
+              transportestrome@gmail.com
             </a>
           </p>
         </div>
@@ -319,7 +324,7 @@
         </div>
         <div class="col-md-3 info_news">
           <h5>
-            Newsletter
+            Boletin Informativo
           </h5>
           <form action="">
             <div>
@@ -330,7 +335,7 @@
             </div>
             <div class="d-flex justify-content-end">
               <button type="submit">
-                Subscribe
+                Subscribirse
               </button>
             </div>
           </form>
@@ -345,8 +350,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2024
     </p>
   </section>
   <!-- footer section -->
